istio/vs1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vs-1
spec:
  selector:
    matchLabels:
      app: vs-1
  replicas: 2
  template:
    metadata:
      labels:
        app: vs-1
    spec:
      containers:
      - name: server
        image: hwchiu/python-example
        ports:
        - containerPort: 5000
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: vs-1
spec:
  selector:
    app: vs-1
  ports:
  - name: server
    port: 5000
    targetPort: 5000
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-1
spec:
  hosts:
  - vs-1
  http:
  - route:
    - destination:
        host: vs-1
    headers:
      response:
        add:
          test-header: "hwchiu"
